# youllneverstrikealone-backend

./: .gitignore  Dockerfile  README.md  fly.toml  manage.py  pyproject.toml  requirements.txt
gatherings/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
you_ll_never_strike_alone/: asgi.py  settings.py  urls.py  views.py  wsgi.py
